--- a/abaco/Abaco/Abaco/Views/ListaPage.xaml
+++ b/abaco/Abaco/Abaco/Views/ListaPage.xaml
@@ -5,10 +5,19 @@
              x:Class="Abaco.Views.ListaPage"
              Title="Lista">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Listas!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="FillAndExpand">
+            <ListView x:Name="ListViewMenu"
+                    HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <Label Text="{Binding usuario}" FontSize="20"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
